--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
 
 body {
     background: var(--bg-url) no-repeat top center /cover;
+    height: 100vh;
     
 }
 
@@ -171,4 +172,16 @@ footer {
     padding: 24px 0;
     text-align: center;
     font-size: 14px;
+}
+
+/* MEDIA QUERIES */
+
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./icons/bg-desktop.jpg);
+    }
+
+    .light {
+        --bg-url: url(./icons/bg-desktop-light.jpg);
+    }
 }
