assigning animation on switch button

--- a/style.css
+++ b/style.css
@@ -86,11 +86,16 @@ body * {
     z-index: 1;
     transform: translateY(-50%);
     
+    animation: slide-back 0.3s;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.3s forwards;
+    
 }
 
 #switch span {
@@ -183,5 +188,27 @@ footer {
 
     .light {
         --bg-url: url(./icons/bg-desktop-light.jpg);
+    }
+}
+
+/* ANIMATION */
+
+@keyframes slide-in {
+    from{
+        left:0;
+    }
+
+    to{
+        left:50%;
+    }
+}
+
+@keyframes slide-back {
+    from{
+        left:50%;
+    }
+
+    to{
+        left:0;
     }
 }
